Bug/fix next back buttons (#416)
* Fix the next button on the concepts pages

* Add button and logic for going to the previous page

* Remove unwanted spaces

--- a/src/scss/common/typography.scss
+++ b/src/scss/common/typography.scss
@@ -80,18 +80,14 @@ div.isaac-nav-link {
   }
 
   &.next-link {
-    padding-right: 1.2rem;
-    background-image: url("/assets/chevron_right.svg");
-    background-repeat: no-repeat;
-    background-position: center right;
     clear: right;
     text-decoration: none;
+    display: flex;
+    align-items: center;
   }
   &.previous-link {
-    padding-left: 1.2rem;
-    background-image: url("/assets/chevron_left.svg");
-    background-repeat: no-repeat;
-    background-position: center left;
+    display: flex;
+    align-items: center;
     clear: left;
     text-decoration: none;
   }
